Zavrsena Stranica za odabran food (konacno)

--- a/src/app/components/partials/tags/tags.component.css
+++ b/src/app/components/partials/tags/tags.component.css
@@ -5,12 +5,16 @@ div {
 }
 
 div a {
-  background-color: #acacac;
+  background-color: #888888;
   padding: 0.3rem 1rem;
   margin: 0.2rem 0.15rem;
   border-radius: 10rem;
   font-weight: 600;
-  color: blue;
+  color: rgba(0, 57, 90, 0.822);
+}
+
+div a:hover {
+  background-color: #c73232;
 }
 
 a .active {
