Dodeljena funkcionalnost dugmetu na food-page

--- a/src/app/components/pages/food-page/food-page.component.html
+++ b/src/app/components/pages/food-page/food-page.component.html
@@ -33,7 +33,7 @@
       </span>
     </div>
 
-    <button>Add To Cart</button>
+    <button (click)="addToCart()">Add To Cart</button>
 
   </div>
 </div>
