--- a/src/app/components/partials/header/header.component.html
+++ b/src/app/components/partials/header/header.component.html
@@ -20,7 +20,7 @@
                     </li>
                     
                     <li>
-                        <a routerLink="/cart-page"> Cart <span>8</span> </a>
+                        <a routerLink="./cart-page"> Cart <span>8</span> </a>
                     </li>
 
                 </ul>
