Zavrsena komponenta not-found i dodata u cart-page

--- a/src/app/components/pages/cart-page/cart-page.component.html
+++ b/src/app/components/pages/cart-page/cart-page.component.html
@@ -1,5 +1,11 @@
 <app-title title="Cart Page" margin="1.6rem 0 0 2.3rem"></app-title>
 
+<app-not-found
+  [visible]="!cart || !cart.items.length"
+  notFoundMessage="Cart Page Is Empty!"
+  resetLinkText="Go To Homepage"
+></app-not-found>
+
 <div *ngIf="cart && cart.items.length" class="container">
 <ul>
   <li *ngFor="let cartItem of cart.items">
