--- a/src/app/components/pages/food-page/food-page.component.html
+++ b/src/app/components/pages/food-page/food-page.component.html
@@ -29,7 +29,7 @@
 
     <div class="cook-time">
       <span>
-        Time to cook about <strong>{{food.cookTime}}</strong> minutes
+        Lenght of movie: <strong>{{food.cookTime}}</strong> minutes
       </span>
     </div>
 
