--- a/src/app/components/pages/home/home.component.css
+++ b/src/app/components/pages/home/home.component.css
@@ -16,7 +16,7 @@ li a{
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  color: #e72929;
+  color: Whitesmoke;
 }
 
 li a:hover{
@@ -63,10 +63,10 @@ li a img{
 
 .origins span{
   border-radius: 2rem;
-  background-color: whitesmoke;
+  background-color: transparent;
   display: inline-block;
-  font-size: 0.8rem;
-  color: grey;
+  font-size: 0.9rem;
+  color: whitesmoke;
   margin-right: 0.3rem;
   padding: 0 0.5rem;
   margin-top: 0.2rem;
