--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -27,6 +27,7 @@ resetLinkText="Reset Search">
           <div class="cook-time">
             <span>🕒</span>
             {{food.cookTime}}
+            <span>Min</span>
           </div>
         </div>
       </div>
