--- a/src/app/components/partials/header/header.component.html
+++ b/src/app/components/partials/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <div class="container">
-        <a routerLink="/" class="logo">FoodStore</a>
+        <a routerLink="/" class="logo">Filmovita</a>
             <nav>
                 <ul>
 
