--- a/src/app/components/pages/cart-page/cart-page.component.css
+++ b/src/app/components/pages/cart-page/cart-page.component.css
@@ -7,11 +7,13 @@
 }
 
 ul{
+  background-color: rgb(66, 64, 64);
+  opacity: 0.65;
   display: flex;
   flex-direction: column;
-  flex:3 0;
+  flex: 3 0;
   justify-content: space-evenly;
-  border: 1px solid #967070;
+  border: 1px solid #ffffff;
   border-radius: 1rem;
   list-style: none;
   margin: 0.5rem;
@@ -23,7 +25,7 @@ ul li{
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
-  border-bottom: 1px solid #bdbdbd;
+  border-bottom: 1px solid #ffffff;
 }
 
 ul li:last-child{
@@ -39,6 +41,7 @@ li img{
 
 li div{
   padding: 1rem;
+  color: rgb(0, 255, 76);
 }
 
 li div:not(:first-child){
@@ -49,7 +52,7 @@ li select{
   width: 3rem;
   outline: none;
   border: none;
-  border-bottom: 1px solid rgb(182, 182, 182);
+  border-bottom: 1px solid rgb(255, 255, 255);
   font-size: 1.1rem;
   font-weight: 100;
 }
@@ -58,12 +61,15 @@ li .remove-button{
   border-radius: 1rem;
   border: none;
   padding: 0.5rem;
-  color: #9e0505;
-  opacity: 0.7;
+  background-color: rgba(167, 74, 255, 0.973);
+  color: whitesmoke;
+  opacity: 0.8;
+  font-weight: bold;
   outline: none;
 }
 
 li .remove-button:hover{
+  background-color: rgba(66, 116, 255, 0.9);
   opacity: 1;
   cursor: pointer;
 }
@@ -75,13 +81,17 @@ li .remove-button:hover{
   align-items: center;
   flex:1 3;
   height: 20rem;
-  border: 1px solid #745555;
+  border: 1px solid #ffffff;
   border-radius: 1rem;
   padding: 0.5rem;
   margin: 0.5rem;
 }
 
 .checkout>div{
+  background-color: rgba(167, 74, 255, 0.873);
+  border-radius: 15px;
+  padding-left: 30px;
+  padding-right: 30px;
   font-size: 1.4rem;
   margin: 1rem;
   flex: 3;
@@ -97,18 +107,18 @@ li .remove-button:hover{
 
 .foods-count::before{
   content:"Count: ";
-  color: rgb(83, 83, 83);
+  color: rgb(255, 255, 255);
 }
 
 .total-price::before{
   content: 'Price: ';
-  color: rgb(75, 75, 75);
+  color: rgb(255, 255, 255);
 }
 
 .checkout a{
   padding: 1rem;
   color: whitesmoke;
-  background:#c20909;
+  background:rgba(167, 74, 255, 0.973);
   display: block;
   width: 99%;
   border-radius: 1rem;
@@ -118,6 +128,7 @@ li .remove-button:hover{
 }
 
 .checkout a:hover{
+  background-color: rgba(66, 116, 255, 0.9);
   opacity: 1;
   cursor: pointer;
 }
