--- a/src/app/components/partials/search/search.component.css
+++ b/src/app/components/partials/search/search.component.css
@@ -24,13 +24,12 @@ div button{
   font-size: 1rem;
   border-radius: 0 10rem 10rem 0;
   border: none;
-  background-color: #af0000;
+  background-color: rgba(167, 74, 255, 0.473);
   color: whitesmoke;
-  opacity: 0.8;
   outline: none;
 }
 
 div button:hover{
-  opacity: 1;
+  background-color: rgba(66, 116, 255, 0.6);
   cursor: pointer;
 }
