Dodata Login Komponenta

--- a/src/app/components/partials/header/header.component.html
+++ b/src/app/components/partials/header/header.component.html
@@ -5,7 +5,7 @@
                 <ul>
 
                     <li>
-                        <a routerLink="/Login">Login</a>
+                        <a routerLink="./login-page">Login</a>
                     </li>
 
                     <li class="menu-container">
