--- a/src/app/components/partials/header/header.component.css
+++ b/src/app/components/partials/header/header.component.css
@@ -1,7 +1,7 @@
 header{
   position: relative;
   background: black;
-  padding-top: 1rem;
+  padding-top: 8px;
   padding-left: 1rem;
   padding-right: 1rem;
 }
@@ -12,7 +12,7 @@ a{
   font-weight: bold;
   border-radius: 15px;
   width: 15%;
-  height: 10%;
+  height: 15%;
 }
 
 a:hover{
@@ -47,7 +47,8 @@ ul a{
   padding: 2rem;
   display: inline-block;
   text-align: center;
-  width: 80%;
+  width: 95%;
+  height: 10%;
   border: 5px;
 }
 
