Dodata animacija pri pokusaju logovanja (slika kamere josuvek ne radi

--- a/src/app/components/pages/loading-animation/loading-animation.component.html
+++ b/src/app/components/pages/loading-animation/loading-animation.component.html
@@ -1,4 +1,4 @@
 <div class="animation-container">
-  <img routerLink="./assets/camera.gif" alt="Loading animation" />
+  <img routerLink="./public/assets/camera.gif" alt="Loading animation" />
   <p>Molimo sačekajte...</p>
 </div>
