Resena ucitavanje slike kamere

--- a/src/app/components/pages/loading-animation/loading-animation.component.html
+++ b/src/app/components/pages/loading-animation/loading-animation.component.html
@@ -1,4 +1,5 @@
 <div class="animation-container">
-  <img routerLink="./public/assets/camera.gif" alt="Loading animation" />
+  <img src="/assets/camera.jpg" alt="Loading animation" >
+  <br>
   <p>Molimo sačekajte...</p>
 </div>
