--- a/src/app/components/pages/login-page/login-page.component.html
+++ b/src/app/components/pages/login-page/login-page.component.html
@@ -5,3 +5,4 @@
   <button type="submit">Prijavi se</button>
   <div *ngIf="error" style="color: red;">{{ error }}</div>
 </form>
+<p>Nemate nalog? <button type="button" routerLink="/register">Registrujte se ovde</button></p>
