--- a/src/app/components/partials/header/header.component.html
+++ b/src/app/components/partials/header/header.component.html
@@ -13,9 +13,8 @@
                         <a routerLink="/dashboard">User</a>
 
                         <div class="menu">
-                            <a routerLink="/profile">Profile</a>
+                            <a routerLink="/profil">Profile</a>
                             <a routerLink="/orders">Orders</a>
-                            <a>Logout</a>
                         </div>
 
                     </li>
