--- a/src/app/components/pages/user-info/user-info.component.css
+++ b/src/app/components/pages/user-info/user-info.component.css
@@ -1,3 +1,17 @@
+h2{
+    text-align: center;
+    color: whitesmoke;
+}
+
 div{
-    align-items: center;
+  background-color: rgba(87, 87, 87, 0.486);
+  padding-top: 10%;
+  padding-bottom: 5%;
+  margin-left: 30%;
+  margin-right: 30%;
+  border: 1px solid rgb(255, 255, 255);
+  padding: 10px;
+  text-align: center;
+  color: whitesmoke;
+  border-radius: 15px;
 }
