--- a/src/app/components/partials/header/header.component.html
+++ b/src/app/components/partials/header/header.component.html
@@ -10,13 +10,7 @@
                     </li>
 
                     <li class="menu-container" *ngIf="userLoggedIn">
-                        <a routerLink="/dashboard">User</a>
-
-                        <div class="menu">
-                            <a routerLink="/profil">Profile</a>
-                            <a routerLink="/orders">Orders</a>
-                        </div>
-
+                        <a routerLink="/profil">User</a>
                     </li>
                     
                     <li>
