--- a/src/app/components/pages/cart-page2/cart-page.component.html
+++ b/src/app/components/pages/cart-page2/cart-page.component.html
@@ -45,6 +45,6 @@
     <div class="total-price">{{cart.totalPrice|currency}}</div>
   </div>
 
-  <a routerLink="/checkout">Proceed to Checkout</a>
+  <a routerLink="/user-info">Proceed to Checkout</a>
 </div>
 </div>
