--- a/src/app/components/pages/cart-page2/cart-page.component.html
+++ b/src/app/components/pages/cart-page2/cart-page.component.html
@@ -45,6 +45,7 @@
     <div class="total-price">{{cart.totalPrice|currency}}</div>
   </div>
 
-  <a routerLink="/user-info">Proceed to Checkout</a>
+  <button (click)="checkout()">Proceed to Checkout</button>
+
 </div>
 </div>
